--- a/index.html
+++ b/index.html
@@ -37,12 +37,50 @@
 				</div>
 				<div class="col-md card p-5">
 					<h1>Horizon — <br>Naturalness in Driver–Car Interaction</h1>
-					<span>A project by Politecnico di Milano | Digital and Interaction Design 2022</span>
-					<span>Umnah Aslam, Mojca Fortunat, Madeleine Kiær, Xiyu Li, Ruiyi Liu, Gustav Moorhouse, Jan Ostrówka, Weijian Xu</span>
-					<span>Marco Ajovalasit, Mariana Ciancia, Fabio Salice</span>
+					<div class="row row-cols-4">
+						<div class="profile col">
+							<img src="assets/img/jan.jpg">
+							<span>Umnah Aslam</span>
+						</div>
+						<div class="profile col">
+							<img src="assets/img/jan.jpg">
+							<span>Mojca Fortunat</span>
+						</div>
+						<div class="profile col">
+							<img src="assets/img/jan.jpg">
+							<span>Madeleine Kiær</span>
+						</div>
+						<div class="profile col">
+							<img src="assets/img/jan.jpg">
+							<span>Xiyu Li</span>
+						</div>
+						<div class="profile col">
+							<img src="assets/img/jan.jpg">
+							<span>Ruiyi Liu</span>
+						</div>
+						<div class="profile col">
+							<img src="assets/img/jan.jpg">
+							<span>Gustav Moorhouse</span>
+						</div>
+						<div class="profile col">
+							<img src="assets/img/jan.jpg">
+							<span>Jan Ostrówka</span>
+						</div>
+						<div class="profile col">
+							<img src="assets/img/jan.jpg">
+							<span>Weijian Xu</span>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
+		<footer class="fixed-bottom">
+			<div class="container-md">
+				<p>A project by Politecnico di Milano | Digital and Interaction Design 2022</p>
+				<p>Students: Umnah Aslam, Mojca Fortunat, Madeleine Kiær, Xiyu Li, Ruiyi Liu, Gustav Moorhouse, Jan Ostrówka, Weijian Xu</p>
+				<p>Professors: Marco Ajovalasit, Mariana Ciancia, Fabio Salice</p>
+			</div>
+		</footer>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
