--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<meta http-equiv="refresh" content="0; url=index.php" />
+<!doctype html>
+<html lang="en">
+<head><meta http-equiv="refresh" content="0; url=index.php" /></head>
+</html>
