--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html lang="en">
-<head><meta http-equiv="refresh" content="0; url=index.php" /></head>
+<head><meta http-equiv="refresh" content="0; url=start.php" /></head>
 </html>
