--- a/showcase.html
+++ b/showcase.html
@@ -1,8 +1,8 @@
-<?php include 'head.php'; ?>
+@@include('header.html')
 
 <section class="container-md ps-0">
 	<div class="row">
-		<?php include 'nav.php'; ?>
+		@@include('nav.html')
 		
 		<div class="col-md card p-5">
 			<img src="assets/img/stage1.jpg"/>
@@ -13,4 +13,4 @@
 	</div>
 </section>
 
-<?php include 'footer.php'; ?>
+@@include('footer.html')
