ok things are updating nicely again

--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
 			<a class="nav-link" href="#">Team</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="showcase">Showcase</a>
+			<a class="nav-link" href="showcase.html">Showcase</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="#">MVP</a>
