--- a/showcase.html
+++ b/showcase.html
@@ -5,9 +5,9 @@
 		@@include('nav.html')
 		
 		<div class="col-md card p-5">
-			<img src="assets/img/stage1.jpg"/>
-			<img src="assets/img/stage2.jpg"/>
-			<img src="assets/img/stage3.jpg"/>
+			<img src="img/stage1.jpg"/>
+			<img src="img/stage2.jpg"/>
+			<img src="img/stage3.jpg"/>
 		</div>
 		
 	</div>
