event listener for nav

--- a/showcase.html
+++ b/showcase.html
@@ -1,6 +1,6 @@
 @@include('header.html')
 
-<section class="container-md ps-0">
+<section class="container-md ps-0 page" id="showcase">
 	<div class="row">
 		@@include('nav.html')
 		
