--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <div class="col-md-3 col-lg-2 ps-0">
 	<ul class="nav flex-column">
 		<li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="#">Home</a>
+			<a class="nav-link active" aria-current="page" href="/">Home</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="#">Process</a>
