exclude -content files from dist

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 @@include('header.html')
 
-<section class="container-md ps-0">
+<section class="container-md ps-0 page" id="home">
 	<div class="row">
 		@@include('nav.html')
-		@@include('page.html')
+		@@include('index-content.html')
 	</div>
 </section>
 
