--- a/showcase.html
+++ b/showcase.html
@@ -3,13 +3,7 @@
 <section class="container-md ps-0 page" id="showcase">
 	<div class="row">
 		@@include('nav.html')
-		
-		<div class="col-md card p-5">
-			<img src="img/stage1.jpg"/>
-			<img src="img/stage2.jpg"/>
-			<img src="img/stage3.jpg"/>
-		</div>
-		
+		@@include('showcase-content.html')
 	</div>
 </section>
 
