--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-		<footer class="fixed-bottom">
+		<footer>
 			<div class="container-md">
 				<p>A project by Politecnico di Milano | Digital and Interaction Design 2022</p>
 				<p>Students: Umnah Aslam, Mojca Fortunat, Madeleine Kiær, Xiyu Li, Ruiyi Liu, Gustav Moorhouse, Jan Ostrówka, Weijian Xu</p>
