--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 @@include('header.html')
 
-<section class="container-md ps-0 page" id="home">
+<div class="container-md ps-0 page" id="home">
 	<div class="row">
 		@@include('nav.html')
 		@@include('index-content.html')
 	</div>
-</section>
+</div>
 
 @@include('footer.html')
