--- a/showcase-content.html
+++ b/showcase-content.html
@@ -1,5 +1,7 @@
 <div class="col-md card p-5">
-	<img src="img/stage1.jpg"/>
-	<img src="img/stage2.jpg"/>
-	<img src="img/stage3.jpg"/>
+	<section>
+		<img src="img/stage1.jpg"/>
+		<img src="img/stage2.jpg"/>
+		<img src="img/stage3.jpg"/>
+	</section>
 </div>
