--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <div class="col-md-3 col-lg-2 ps-0">
-	<ul class="nav flex-column">
+	<ul class="nav sticky-md-top pt-5 flex-column">
 		<li class="nav-item">
 			<a class="nav-link active" aria-current="page" href="/">Home</a>
 		</li>
