--- a/showcase.html
+++ b/showcase.html
@@ -1,10 +1,10 @@
 @@include('header.html')
 
-<section class="container-md ps-0 page" id="showcase">
+<div class="container-md ps-0 page" id="showcase">
 	<div class="row">
 		@@include('nav.html')
 		@@include('showcase-content.html')
 	</div>
-</section>
+</div>
 
 @@include('footer.html')
