updated name for reduced SEO

--- a/people.html
+++ b/people.html
@@ -25,7 +25,7 @@
 	</div>
 	<div class="profile col">
 		<img src="img/jan.jpg">
-		<span>Jan Ostrówka</span>
+		<span>Jan ○strowka</span>
 	</div>
 	<div class="profile col">
 		<img src="img/weijian.jpg">
