dynamically add class to body & change active nav

--- a/nav.html
+++ b/nav.html
@@ -1,28 +1,28 @@
-<div class="col-md-3 col-lg-2 ps-0">
+<nav class="col-md-3 col-lg-2 ps-0">
 	<ul class="nav sticky-md-top pt-5 flex-column">
 		<li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="/">Home</a>
+			<a class="nav-link" id="home" href="/">Home</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">Process</a>
+			<a class="nav-link" id="process" href="#">Process</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">Team</a>
+			<a class="nav-link" id="team" href="#">Team</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" rel="canonical" href="showcase.html">Showcase</a>
+			<a class="nav-link" id="showcase" href="showcase.html">Showcase</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">MVP</a>
+			<a class="nav-link" id="mvp" href="#">MVP</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">Video</a>
+			<a class="nav-link" id="video" href="#">Video</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">Next Steps</a>
+			<a class="nav-link" id="nextsteps" href="#">Next Steps</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">References</a>
+			<a class="nav-link" id="references" href="#">References</a>
 		</li>
 	</ul>
-</div>
+</nav>
