--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,9 @@
 <nav class="col-md-3 col-lg-2 ps-0">
+	<header>
+		<a class="nav-link" href="/">
+			<img class="logo" src="img/logo.svg" />
+		</a>
+	</header>
 	<ul class="nav sticky-md-top pt-5 flex-column">
 		<li class="nav-item">
 			<a class="nav-link" id="home" href="/">Home</a>
