--- a/showcase-content.html
+++ b/showcase-content.html
@@ -1,7 +1,46 @@
 <div class="col-md card p-5">
 	<section>
-		<img src="img/stage1.jpg"/>
-		<img src="img/stage2.jpg"/>
-		<img src="img/stage3.jpg"/>
+		
+		<img src="img/exhibit_overview.png"/>
+		
+		
+		<div class="accordion" id="accordionPanelsStayOpenExample">
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="panelsStayOpen-headingOne">
+					<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+						1. Information Table
+					</button>
+				</h2>
+				<div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+					<div class="accordion-body">
+						<img src="img/stage1.jpg"/>
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+						2. Immersive Experience
+					</button>
+				</h2>
+				<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+					<div class="accordion-body">
+						<img src="img/stage2.jpg"/>
+					</div>
+				</div>
+			</div>
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="panelsStayOpen-headingThree">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+						3. Feedback Wall
+					</button>
+				</h2>
+				<div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+					<div class="accordion-body">
+						<img src="img/stage3.jpg"/>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 </div>
