--- a/showcase-content.html
+++ b/showcase-content.html
@@ -1,19 +1,58 @@
 <div class="col-md card p-5">
 	<section>
 		
-		<img src="img/exhibit_overview.png"/>
+		<figure class="figure">
+			<img src="img/exhibit_overview.png" class="figure-img img-fluid rounded" alt="Information Table">
+			<figcaption class="figure-caption">An overview of the Horizon exhibition setup. Scoll down for detailed information.</figcaption>
+		</figure>
 		
+		<div class="row mt-4 mb-5">
+			<div class="col-md-4">
+				<div class="card">
+					<img src="img/stage1.jpg" class="card-img-top" alt="Information Table">
+					<div class="card-body">
+						<h5 class="card-title">1. Information Table</h5>
+						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<a data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne" class="btn btn-primary">Learn more</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img src="img/stage2.jpg" class="card-img-top" alt="Information Table">
+					<div class="card-body">
+						<h5 class="card-title">2. Immersive Experience</h5>
+						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<a data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo" class="btn btn-primary">Learn more</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img src="img/stage3.jpg" class="card-img-top" alt="Information Table">
+					<div class="card-body">
+						<h5 class="card-title">3. Feedback Wall</h5>
+						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<a data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree" class="btn btn-primary">Learn more</a>
+					</div>
+				</div>
+			</div>
+		</div>
 		
 		<div class="accordion" id="accordionPanelsStayOpenExample">
 			<div class="accordion-item">
 				<h2 class="accordion-header" id="panelsStayOpen-headingOne">
-					<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
 						1. Information Table
 					</button>
 				</h2>
-				<div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+				<div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
 					<div class="accordion-body">
-						<img src="img/stage1.jpg"/>
+						<figure class="figure">
+							<img src="img/stage1.jpg" class="figure-img img-fluid rounded" alt="Information Table">
+							<figcaption class="figure-caption">People getting introduced to the project</figcaption>
+						</figure>
+						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 					</div>
 				</div>
 			</div>
@@ -25,7 +64,11 @@
 				</h2>
 				<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
 					<div class="accordion-body">
-						<img src="img/stage2.jpg"/>
+						<figure class="figure">
+							<img src="img/stage2.jpg" class="figure-img img-fluid rounded" alt="Information Table">
+							<figcaption class="figure-caption">Interacting with the system of sliding knob, center stack display, HUD and cluster screen</figcaption>
+						</figure>
+						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 					</div>
 				</div>
 			</div>
@@ -37,7 +80,11 @@
 				</h2>
 				<div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
 					<div class="accordion-body">
-						<img src="img/stage3.jpg"/>
+						<figure class="figure">
+							<img src="img/stage3.jpg" class="figure-img img-fluid rounded" alt="Information Table">
+							<figcaption class="figure-caption">Collecting valuable external input</figcaption>
+						</figure>
+						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 					</div>
 				</div>
 			</div>
