--- a/nav.html
+++ b/nav.html
@@ -9,25 +9,25 @@
 			<a class="nav-link" id="home" href="/">Home</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="process" href="#">Process</a>
+			<a class="nav-link" id="naturalness" href="naturalnes.html">Naturalness</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="team" href="#">Team</a>
+			<a class="nav-link" id="technology" href="technology.html">Technology</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" id="showcase" href="showcase.html">Showcase</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="mvp" href="#">MVP</a>
+			<a class="nav-link" id="mvp" href="mvp.html">MVP</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="video" href="#">Video</a>
+			<a class="nav-link" id="video" href="video.html">Video</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="nextsteps" href="#">Next Steps</a>
+			<a class="nav-link" id="nextsteps" href="nextsteps.html">Next Steps</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="references" href="#">References</a>
+			<a class="nav-link" id="references" href="references.html">References</a>
 		</li>
 	</ul>
 </nav>
