--- a/showcase-content.html
+++ b/showcase-content.html
@@ -3,10 +3,10 @@
 		
 		<figure class="figure">
 			<img src="img/exhibit_overview.png" class="figure-img img-fluid rounded" alt="Information Table">
-			<figcaption class="figure-caption">An overview of the Horizon exhibition setup. Scoll down for detailed information.</figcaption>
+			<figcaption class="figure-caption">An overview of the Horizon exhibition setup. Scoll down for detailed information about each stage.</figcaption>
 		</figure>
 		
-		<div class="row mt-4 mb-5">
+		<div class="row mt-4 mb-5 exhibit-overview">
 			<div class="col-md-4">
 				<div class="card">
 					<img src="img/stage1.jpg" class="card-img-top" alt="Information Table">
