--- a/showcase.html
+++ b/showcase.html
@@ -1,10 +1,10 @@
-@@include('header.html')
+@@include('partials/header.html')
 
 <div class="container-md ps-0 page" id="showcase">
 	<div class="row">
-		@@include('nav.html')
-		@@include('showcase-content.html')
+		@@include('partials/nav.html')
+		@@include('partials/showcase-content.html')
 	</div>
 </div>
 
-@@include('footer.html')
+@@include('partials/footer.html')
