--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-@@include('header.html')
+@@include('partials/header.html')
 
 <div class="container-md ps-0 page" id="home">
 	<div class="row">
-		@@include('nav.html')
-		@@include('index-content.html')
+		@@include('partials/nav.html')
+		@@include('partials/index-content.html')
 	</div>
 </div>
 
-@@include('footer.html')
+@@include('partials/footer.html')
