--- a/nextsteps.html
+++ b/nextsteps.html
@@ -1,9 +1,9 @@
 @@include('partials/header.html')
 
-<div class="container-md ps-0 page" id="video">
+<div class="container-md ps-0 page" id="nextsteps">
 	<div class="row">
 		@@include('partials/nav.html')
-		@@include('partials/video-content.html')
+		@@include('partials/nextsteps-content.html')
 	</div>
 </div>
 
