update image on process page

--- a/naturalness.html
+++ b/naturalness.html
@@ -1,6 +1,6 @@
 @@include('partials/header.html')
 
-<div class="container-md ps-0 page" id="naturalness">
+<div class="container-md page" id="naturalness">
 	<div class="row">
 		@@include('partials/nav.html')
 		@@include('partials/naturalness-content.html')
