--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 @@include('partials/header.html')
 
-<div class="container-md ps-0 page" id="home">
+<div class="container-md page" id="home">
 	<div class="row">
 		@@include('partials/nav.html')
 		@@include('partials/index-content.html')
