--- a/mvp.html
+++ b/mvp.html
@@ -1,6 +1,6 @@
 @@include('partials/header.html')
 
-<div class="container-md ps-0 page" id="mvp">
+<div class="container-md page" id="mvp">
 	<div class="row">
 		@@include('partials/nav.html')
 		@@include('partials/mvp-content.html')
