--- a/nextsteps.html
+++ b/nextsteps.html
@@ -1,6 +1,6 @@
 @@include('partials/header.html')
 
-<div class="container-md ps-0 page" id="nextsteps">
+<div class="container-md page" id="nextsteps">
 	<div class="row">
 		@@include('partials/nav.html')
 		@@include('partials/nextsteps-content.html')
