--- a/process.html
+++ b/process.html
@@ -1,9 +1,9 @@
 @@include('partials/header.html')
 
-<div class="container-md ps-0 page" id="technology">
+<div class="container-md page" id="technology">
 	<div class="row">
 		@@include('partials/nav.html')
-		@@include('partials/technology-content.html')
+		@@include('partials/process-content.html')
 	</div>
 </div>
 
