--- a/references.html
+++ b/references.html
@@ -1,6 +1,6 @@
 @@include('partials/header.html')
 
-<div class="container-md ps-0 page" id="references">
+<div class="container-md page" id="references">
 	<div class="row">
 		@@include('partials/nav.html')
 		@@include('partials/references-content.html')
