--- a/showcase.html
+++ b/showcase.html
@@ -1,6 +1,6 @@
 @@include('partials/header.html')
 
-<div class="container-md ps-0 page" id="showcase">
+<div class="container-md page" id="showcase">
 	<div class="row">
 		@@include('partials/nav.html')
 		@@include('partials/showcase-content.html')
