--- a/video.html
+++ b/video.html
@@ -1,6 +1,6 @@
 @@include('partials/header.html')
 
-<div class="container-md ps-0 page" id="video">
+<div class="container-md page" id="video">
 	<div class="row">
 		@@include('partials/nav.html')
 		@@include('partials/video-content.html')
