complete index and poster pages

--- a/poster.html
+++ b/poster.html
@@ -1,9 +1,9 @@
 @@include('partials/header.html')
 
-<div class="container-md page" id="process">
+<div class="container-md page" id="poster">
 	<div class="row">
 		@@include('partials/nav.html')
-		@@include('partials/process-content.html')
+		@@include('partials/poster-content.html')
 	</div>
 </div>
 
